--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <title>2020 U.S.COVID-19 Dashboard</title>
+    <title>Hospital Patient Safety Indicators</title>
 
     <script type="text/javascript"
 	    src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
@@ -11,7 +11,7 @@
 
 <body>
 
-  <h1>2020 U.S.COVID-19 Dashboard</h1>
+  <h1>Hospital Patient Safety Indicators</h1>
 
     <button id = "exportPDF">Generate PDF</button>
     <button id = "exportImage">Generate Image</button>
